# footballhome

./: .aider.conf.yml  .aiderignore  .env  .env.example  .gitattributes  .gitignore  .groupme-cookies.json  AGENTS.md  AI_CONTEXT.md  AI_TOOLS.md  ARCHITECTURE_ROADMAP.md  AUTH_ANALYSIS.md  AVAILABILITY_PROGRESS.md  BACK_BUTTON_TEST_CHECKLIST.md  CASA_SCRAPER_STATUS.md  CASA_SELECT_STATUS.md  CASA_STRUCTURE.md  CONVENTIONS.md  DATA_ARCHITECTURE_REFACTOR.md  DATA_AUDIT.md  DEMO_ACCOUNTS.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DEV_LOG.md  GROUPME_CALENDAR_SETUP.md  GROUPME_IMPORT_README.md  JWT_IMPLEMENTATION_PLAN.md  MIGRATION_PLAN.md  MIGRATION_PLAN_NAMES.md  Makefile  OOP_REFACTORING_NOTES.md  PERFORMANCE.md  PLAYER_AVAILABILITY_SYSTEM.md  PRODUCTION_NOTES.md  PROGRESS_NOTE.md  PROGRESS_NOTE_NEW.md  PROGRESS_NOTE_OLD.md  QUICK_START.md  README.md  REBUILD_VERIFICATION.md  (+58 more)
backend/: CMakeLists.txt  Dockerfile  README.md  SQL_FILE_LOGGER_USAGE.md  main.cpp  package-lock.json  package.json  server.js  wait-for-db.sh
backend/cpp/: CMakeLists.txt  Dockerfile
backend/cpp/src/: main.cpp
backend/data-integration/: Dockerfile  README.md  index.js  package.json
backend/data-integration/public/: index.html
backend/data-integration/scrapers/: APIBasedScraper.js  APSLScraper.js
backend/data-integration/scripts/: sync-apsl.js
backend/data-integration/services/: DataIntegrationService.js
backend/docs/: SQLFileWriter.md
backend/express/: package-lock.json  package.json  server.js  server_normalized.js
backend/express/middleware/: auth.js
backend/middleware/: auth.js  rateLimit.js
backend/node/: package.json
backend/routes/: auth.js  events-simple.js  events-test.js  events.js  league-games.js  matches.js  practices.js  rsvps-original.js  rsvps.js  teams.js  venues-simple.js  venues.js
backend/scrapers/: APSLScraper.js  BaseScraper.js  CASAScraper.js  README.md  ScraperManager.js  test-scrapers.js
backend/services/: GeocodingService.js  GooglePlacesService.js  VenueService.js
backend/src/: main.cpp  main_old.cpp
backend/src/controllers/: AdminLaBackfillController.cpp  AdminLaBackfillController.h  AdsController.cpp  AdsController.h  AuthController.cpp  AuthController.h  AvailabilityController.cpp  AvailabilityController.h  BillingController.cpp  BillingController.h  BoysRosterController.cpp  BoysRosterController.h  CalendarController.cpp  CalendarController.h  ChargeFlagsController.cpp  ChargeFlagsController.h  ChatExternalMemberController.cpp  ChatExternalMemberController.h  ClubController.cpp  ClubController.h  ClubLaPoolController.cpp  ClubLaPoolController.h  ClubRostersController.cpp  ClubRostersController.h  DivisionController.cpp  DivisionController.h  EligibilityController.cpp  EligibilityController.h  EventController.cpp  EventController.h  EventReminderController.cpp  EventReminderController.h  EventRsvpController.cpp  EventRsvpController.h  GroupMeController.cpp  GroupMeController.h  InternalRosterController.cpp  InternalRosterController.h  LeadsController.cpp  LeadsController.h  (+54 more)
backend/src/core/: Controller.cpp  Controller.h  Crypto.cpp  Crypto.h  HttpClient.cpp  HttpClient.h  JwtRS256.cpp  JwtRS256.h  Mail.cpp  Mail.h  Request.cpp  Request.h  Response.cpp  Response.h  Router.cpp  Router.h  SQLFileWriter.cpp  SQLFileWriter.h  TeamLabel.cpp  TeamLabel.h  TwilioSMSService.cpp  TwilioSMSService.h
backend/src/database/: Database.cpp  Database.h  Model.cpp  Model.h  SqlBuilder.cpp  SqlBuilder.h  SqlFileLogger.cpp  SqlFileLogger.h
backend/src/models/: BillingExpectations.cpp  BillingExpectations.h  BoysRoster.cpp  BoysRoster.h  ChargeFlags.cpp  ChargeFlags.h  ChatExternalMemberLinker.cpp  ChatExternalMemberLinker.h  LaPool.cpp  LaPool.h  Lead.cpp  Lead.h  LeadContact.cpp  LeadContact.h  MensRoster.cpp  MensRoster.h  MensTeamAssignments.cpp  MensTeamAssignments.h  MensTeamColumns.cpp  MensTeamColumns.h  PayReminderLog.cpp  PayReminderLog.h  PersonBilling.cpp  PersonBilling.h  PersonLinker.cpp  PersonLinker.h  PersonMerge.cpp  PersonMerge.h  PersonOverride.cpp  PersonOverride.h  PersonPayments.cpp  PersonPayments.h  SimRunningMatch.cpp  SimRunningMatch.h  Team.cpp  Team.h  TeamCoach.cpp  TeamCoach.h  TeamReconciliation.cpp  TeamReconciliation.h  (+8 more)
backend/src/orchestration/: SimOrchestrator.cpp  SimOrchestrator.h  SimPool.cpp  SimPool.h  SimReaper.cpp  SimReaper.h
backend/src/services/: BillingProjector.cpp  (+23 more)
backend/tests/: test_game_model_structure.py
sim/: .dockerignore  .gitignore  CMakeLists.txt  DESIGN.md  DESIGN_GUIDE.md  Dockerfile  README.md
sim/mockups/: m0-player.html
sim/scripts/: attribute_pool_assign_latency.sh  attribute_warm_image_spawn.sh  check_behavior_registration.sh  check_cross_match_input_isolation.py  check_determinism_cross_arch.sh  check_no_bad_rng.sh  check_no_floats.sh  check_no_hardcoded_attrs.sh  check_profile_write_policy.sh  check_registry_consistency.sh  gen_registry_header.awk  load_test_orchestrator.sh  mint-dev-jwt.sh  wire-snoop.js
sim/src/: main.cpp
sim/tests/: CMakeLists.txt  test_admin_http_server.cpp  test_ai_controller.cpp  test_async_pg_log.cpp  test_async_pg_log_load.cpp  test_attribute_set.cpp  test_ball_control.cpp  test_ball_on_pitch_scenario.cpp  test_ball_on_pitch_with_defender_scenario.cpp  test_ball_physics.cpp  test_basic_physics.cpp  test_binary_v1_serializer.cpp  test_canonical_hash.cpp  test_compact_shape_behavior.cpp  test_concept_set.cpp  test_cover_shadow_behavior.cpp  test_defender_pursuit.cpp  test_determinism.cpp  test_empty_pitch_scenario.cpp  test_feint_1v1_behavior.cpp  test_fixed64.cpp  test_fixed_math.cpp  test_goal_drill_scenario.cpp  test_half_pitch_scenario.cpp  test_harness.hpp  test_human_controller.cpp  test_in_memory_pg_client.cpp  test_input_frame.cpp  test_jockey_behavior.cpp  test_jwt_verifier.cpp  test_mark_opponent_behavior.cpp  test_match_ball.cpp  test_match_clock.cpp  test_match_event_frame.cpp  test_match_goal_detection.cpp  test_match_lifecycle_persistence.cpp  test_match_playable_area.cpp  test_match_profile_wiring.cpp  test_match_tick.cpp  test_mechanics.cpp  (+28 more)
(+4900 files in other folders)
